# xai4nlp

./: README.md  pyproject.toml  requirements.txt
general_nlp_tasks/: ner_transformers-interpret.ipynb  qa_transformers-interpret.ipynb  sentiment_analysis_captum.ipynb  sentiment_analysis_shap.ipynb
generative_text_tasks/: experiment_token-wise_explains_chatgpt.ipynb  translation_shap_compare_models.ipynb
