[tool.poetry]
name = "xai4nlp"
version = "0.0.1"
description = "Explainable Artificial Intelligence (XAI) Examples applied to Natural Language Processing (NLP)"
authors = ["Wei Ding <wei.ding@allianz.com>"]

[tool.poetry.dependencies]
python = "^3.10.11"
torch = "2.0.0"
transformers = "4.27.2"
pandas = "1.5.3"
captum = "0.6.0"
transformers-interpret = "0.10.0"
shap = "0.41.0"
numpy = "1.23.2"
jupyter = "^1.0.0"
sentencepiece = "0.1.99"
sentence-transformers = "2.2.2"
scipy = "1.9.3"
# ipython = "8.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"